cmake_minimum_required(VERSION 2.6)
project (DatabaseProject)
add_compile_options(--std=c++14 -Wall -g -O3)

add_subdirectory(json11)

set(MODULES filesystem recordsystem indexsystem databasesystem)
set(NOEMPTY_MODULES "")
foreach(M ${MODULES})
    file(GLOB_RECURSE SOURCES ${M}/*.cpp)
    if(SOURCES)
        add_library(${M} STATIC ${SOURCES})
        target_link_libraries(${M} json11 ${NOEMPTY_MODULES})
        target_include_directories(${M} PUBLIC .)
        set(NOEMPTY_MODULES ${NOEMPTY_MODULES} ${M})
    endif()
endforeach()

message(STATUS ${NOEMPTY_MODULES})

file(GLOB TARGETS_CPP test/*.cpp)

foreach(TARGET_PATH ${TARGETS_CPP})
    string(REGEX REPLACE ".*/(.*)" "\\1" TARGET ${TARGET_PATH})
    string(REPLACE ".cpp" "" TARGET ${TARGET})
    message(STATUS TARGET ${TARGET})
    add_executable(${TARGET} ${TARGET_PATH})
    target_include_directories(${TARGET} PUBLIC .)
    if(NOEMPTY_MODULES)
        target_link_libraries(${TARGET} ${NOEMPTY_MODULES})
    endif()
    target_link_libraries(${TARGET} json11)
endforeach()
